Fix name convention, Structure flow, thumbnails and info overlaping

--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@
 .counter,
 .option-bar,
 .reference,
-.imgs, 
-.slide>img,  
-.slideShow-container, 
+.imgs,
+.paragraph, 
+.slideshow-container, 
 .slides-container,
 .thumbnails-popUp, 
 .title{
 	position: absolute;
 }
 
-.slideShow-container{
+.slideshow-container{
 	background-color: rgba(255,255,255,0.3);
 	height: 100%;
 	left: 0%;
@@ -30,15 +30,15 @@
 	width: 100%;
 }
 .btn{
-	background-repeat: no-repeat;
 	background-color: var(--black_T_50);
+	background-position: center;
+	background-repeat: no-repeat;
 	border-color: var(--black_T_50);
 	cursor: pointer;
 	height: 100%;
-	top: 0;
 	opacity: 0.3;
+	top: 0;
 	width: 4%;
-	align-items: center;
 }
 .option-bar{
 	background-color: var(--black_T_50);
@@ -92,6 +92,7 @@
 	bottom: 0;
 	display: block;
 	height: 100%;
+	position: initial;
 	width: 100%;
 }
 .thumbnails-popUp{
@@ -114,7 +115,6 @@
 	height: 20%;
 	left: 1%;
 	padding: 10px;
-	position: absolute;
 	top: 71%;
 	text-align: justify;
 	width: 47%;
@@ -132,7 +132,7 @@
 
 .actual>img, 
 .btn:hover,
-img:hover{
+.thumbnails-imgs>img:hover{
 	opacity: 1;
 }
 .reference{
@@ -145,7 +145,7 @@ img:hover{
 }
 
 @media screen and (max-device-width: 732px){
-	.slideShow-container{
+	.slideshow-container{
 		height: 44%
 	}
 
